# ggpt

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
ggpt/: __init__.py  __main__.py  cli.py  console.py  const.py  exception.py  ggpt.py  gpt.py  utils.py
tests/: test_gpt.py
