[tool.poetry]
name = "ggpt"
version = "0.2.0"
description = "Gorgeous CLI tools using GPT"
authors = ["jenz0000 <fullswing0603@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jenz0000/ggpt"

[tool.poetry.dependencies]
python = "^3.8.1"
click = "^8.1.3"
rich = "^13.3.2"
openai = "^1.9.0"
pytest = "^8.0.1"

[tool.poetry.scripts]
ggpt = "ggpt.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
